[package]
name = "silent-threshold-encryption-gadget"
version = "0.1.0"
edition = "2021"

[dependencies]
gadget-common = { git = "https://github.com/webb-tools/gadget" }
gadget-core = { git = "https://github.com/webb-tools/gadget" }
protocol-macros = { git = "https://github.com/webb-tools/gadget" }

async-trait = { version = "0.1.73" }
futures = { version = "0.3.30" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time", "net"] }

rand = { version = "0.8.5" }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3.1" }

serde = { version = "1.0.188" }
serde_json = { version = "1.0" }
parking_lot = { version = "0.12.1" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0"  }

# Silent Threshold Encryption dependencies
silent-threshold = { git = "https://github.com/guruvamsi-policharla/silent-threshold-encryption.git" }
ark-std = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-poly = { version = "0.4.0" }
ark-bls12-381 = { version = "0.4.0" }
ark-bn254 = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }

[dev-dependencies]
test-utils = { git = "https://github.com/webb-tools/gadget" }
tangle-primitives = { git = "https://github.com/webb-tools/tangle.git", branch = "main" }
